--- a/Sass/layout/_sidebar.scss
+++ b/Sass/layout/_sidebar.scss
@@ -74,10 +74,13 @@
                 display: grid;
                 grid-template-columns: 1fr 1fr;
                 column-gap: 0.5rem;
-                font-size: 1.2rem;
+                font-size: 1.4rem;
 
                 a {
                     color: $grey-color;
+                    &:hover {
+                        color: red;
+                    }
                 }
             }
 
