--- a/View/index.html
+++ b/View/index.html
@@ -150,66 +150,47 @@
         <div class="swiper-wrapper slider">
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""/></div>
                 <div class="quality">HD</div>
-                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-              <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+              <div class="card-firm__info"><span class="item star">9</span><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+              </div>
             </div>
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""/></div>
                 <div class="quality">HD</div>
-                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-              <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+              <div class="card-firm__info"><span class="item star">2</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117 phut</span>
+              </div>
             </div>
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""/></div>
                 <div class="quality">HD</div>
-                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-              <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+              <div class="card-firm__info"><span class="item star">1</span><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+              </div>
             </div>
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""/></div>
                 <div class="quality">HD</div>
-                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-              <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+              <div class="card-firm__info"><span class="item star">3</span><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+              </div>
             </div>
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh3.jpg" alt=""/></div>
                 <div class="quality">HD</div>
-                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-              <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
-            </div>
-          </div>
-          <div class="swiper-slide card-slider">
-            <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
-                <div class="quality">HD</div>
-                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-              <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
-            </div>
-          </div>
-          <div class="swiper-slide card-slider">
-            <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
-                <div class="quality">HD</div>
-                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-              <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
-            </div>
-          </div>
-          <div class="swiper-slide card-slider">
-            <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
-                <div class="quality">HD</div>
-                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-              <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+              <div class="card-firm__info"><span class="item star">5</span><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+              </div>
             </div>
           </div>
         </div>
@@ -224,82 +205,90 @@
         <div class="home-container__main">
           <div class="row gy-5">
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
-              <div class="film-list">
+              <div class="film-item">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""/></div>
                     <div class="quality">HD</div>
-                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-                  <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+                  <div class="card-firm__info"><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
-              <div class="film-list">
+              <div class="film-item">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""/></div>
                     <div class="quality">HD</div>
-                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-                  <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+                  <div class="card-firm__info"><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
-              <div class="film-list">
+              <div class="film-item">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""/></div>
                     <div class="quality">HD</div>
-                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-                  <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+                  <div class="card-firm__info"><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
-              <div class="film-list">
+              <div class="film-item">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""/></div>
                     <div class="quality">HD</div>
-                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-                  <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+                  <div class="card-firm__info"><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
-              <div class="film-list">
+              <div class="film-item">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""/></div>
                     <div class="quality">HD</div>
-                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-                  <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+                  <div class="card-firm__info"><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
-              <div class="film-list">
+              <div class="film-item">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""/></div>
                     <div class="quality">HD</div>
-                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-                  <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+                  <div class="card-firm__info"><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
-              <div class="film-list">
+              <div class="film-item">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh3.jpg" alt=""/></div>
                     <div class="quality">HD</div>
-                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-                  <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+                  <div class="card-firm__info"><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
-              <div class="film-list">
+              <div class="film-item">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh2.jpg" alt=""/></div>
                     <div class="quality">HD</div>
-                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
-                  <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
+                    <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Ten phim</a>
+                  <div class="card-firm__info"><span class="item star">100</span><span class="item">2021</span><i class="item fa-solid fa-circle"></i><span class="item">120 phut</span>
+                  </div>
                 </div>
               </div>
             </div>
