--- a/Css/main.css
+++ b/Css/main.css
@@ -1359,10 +1359,13 @@ body li {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 0.5rem;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 .sidebar__nav .nav-list__grid a {
   color: #393939;
+}
+.sidebar__nav .nav-list__grid a:hover {
+  color: red;
 }
 .sidebar::-webkit-scrollbar {
   width: 0.6rem;
@@ -1743,17 +1746,21 @@ body li {
   flex-direction: column;
   gap: 1rem;
   width: 100%;
+  height: 100%;
   height: auto;
 }
 .card-firm__main {
   position: relative;
   width: 100%;
+  height: 100%;
 }
 .card-firm__main .poster {
   width: 100%;
+  height: 27rem;
 }
 .card-firm__main .poster img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 .card-firm__main .quality {
