--- a/Sass/component/_cardfirm.scss
+++ b/Sass/component/_cardfirm.scss
@@ -6,17 +6,19 @@
     gap: 1rem;
 
     width: 100%;
+    height: 100%;
     height: auto;
 
     &__main {
         position: relative;
         width: 100%;
-       
+        height: 100%;
         .poster {
             width: 100%;
-
+            height: 27rem;
             img {
                 width: 100%;
+                height: 100%;
                 object-fit: cover;
             }
         }
@@ -50,7 +52,7 @@
 
             background: rgba(0, 25, 51, 0.6);
             color: $white-color;
-           
+
             cursor: pointer;
             opacity: 0;
             transition: all 0.5s;
